refactor: improve test code quality